# fwht_hls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: hls_generator.cpp
argmax_funtions/src/: argmax.cpp
argmax_funtions/vitis_argmax/: .cproject  .project  hls.app
decoder/: Makefile
decoder/decoder_gf64/: .cproject  .project  hls.app
decoder/src/: archi.hpp  argmax_x86.hpp  decoder.cpp  dedicated_execute.hpp  f_function_freq_in.hpp  f_function_proba_in.hpp  fix_xor_list.hpp  fwht.hpp  fwht_norm.hpp  g_function_freq_in.hpp  g_function_proba_in.hpp  main.cpp  middle_node_pruned_rate_0.hpp  middle_node_pruned_rate_1_after_f.hpp  middle_node_pruned_rate_1_after_g.hpp  middle_node_pruned_rep_after_f.hpp  middle_node_pruned_rep_after_g.hpp  normalize_c.hpp
fwht_64_int/src/: fwht64.cpp
fwht_64_int/vitis_fwht64_int/: .cproject  .project  hls.app
fwht_funtions/src/: fwht64.cpp
fwht_funtions/vitis_fwht64/: .cproject  .project  hls.app
matrices/GF128/: GF128N128.txt  GF128N16.txt  GF128N256.txt  GF128N32.txt  GF128N4.txt  GF128N512.txt  GF128N64.txt  GF128N8.txt
matrices/GF16/: GF16N1024.txt  GF16N128.txt  GF16N16.txt  GF16N2.txt  GF16N256.txt  GF16N32.txt  GF16N4.txt  GF16N512.txt  GF16N64.txt  GF16N8.txt
matrices/GF256/: GF256N128.txt  GF256N16.txt  GF256N2.txt  GF256N256.txt  GF256N32.txt  GF256N4.txt  GF256N512.txt  GF256N64.txt  GF256N8.txt
matrices/GF32/: GF32N1024.txt  GF32N128.txt  GF32N16.txt  GF32N2.txt  GF32N256.txt  GF32N32.txt  GF32N4.txt  GF32N512.txt  GF32N64.txt  GF32N8.txt
matrices/GF64/: GF64N1024.txt  GF64N128.txt  GF64N16.txt  GF64N2.txt  GF64N256.txt  GF64N32.txt  GF64N4.txt  GF64N512.txt  GF64N64.txt  GF64N8.txt
matrices/GF8/: GF8N1024.txt  GF8N128.txt  GF8N16.txt  GF8N256.txt  GF8N32.txt  GF8N4.txt  GF8N512.txt  GF8N64.txt  GF8N8.txt
multiply_funtions/multiply_funtions/: .cproject  .project  hls.app
multiply_funtions/src/: multiply_funtions.cpp
normalize_funtions/src/: normalize.cpp
normalize_funtions/vitis_normalize/: .cproject  .project  hls.app
src/: gen_decoder.cpp  gen_decoder.hpp  hls_decoder.cpp  hls_decoder_v2.cpp  test.cpp
src/arch/: i_argmax.hpp  i_fwht.hpp  i_normalize.hpp
vitis_2025_2_workspace/: build.tcl  run.bash
(+262 files in other folders)
